syntax = "proto3";
package account;
option go_package = "github.com/danielvladco/go-proto-gql/examples/account;account";
import "gql.proto";
import "examples/datatypes/datatypes.proto";
import "github.com/mwitkow/go-proto-validators@v0.0.0-20180403085117-0950a7990007/validator.proto";

service Service {
    rpc SignIn (SignInReq) returns (SignInRes);
    rpc GetCurrentAccount (GetCurrentAccountReq) returns (GetCurrentAccountRes);
    rpc SignUpWithEmail (SignUpWithEmailReq) returns (SignUpWithEmailRes);
    rpc ResendConfirmationEmail (ResendConfirmationEmailReq) returns (ResendConfirmationEmailRes);
    rpc ConfirmEmail (ConfirmEmailReq) returns (ConfirmEmailRes);
    rpc ForgotPassword (ForgotPasswordReq) returns (ForgotPasswordRes);
    rpc CheckResetPasswordToken (CheckResetPasswordTokenReq) returns (CheckResetPasswordTokenRes);
    rpc ResetPassword (ResetPasswordReq) returns (ResetPasswordRes);
    rpc ChangePassword (ChangePasswordReq) returns (ChangePasswordRes);
    rpc RequestChangeEmail (RequestChangeEmailReq) returns (RequestChangeEmailRes);
    rpc ChangeEmail (ChangeEmailReq) returns (ChangeEmailRes);
    rpc RequestDeleteAccount (RequestDeleteAccountReq) returns (RequestDeleteAccountRes);
    rpc DeleteAccount (DeleteAccountReq) returns (DeleteAccountRes) {
        option (gql.rpc_type) = QUERY;
    }
}

message SignInReq {
    string email = 1 [(validator.field) = {string_not_empty: true regex: "^[a-zA-Z0-9._%+\\-]+@[a-z0-9.\\-]+\\.[a-z]{2,4}$"}, (gql.field) = {dirs: "@req  "}];
    string password = 2 [(validator.field) = {string_not_empty: true length_gt: 5 length_lt: 100}];
}

message GetCurrentAccountReq {

}
message SignUpWithEmailReq {
    string email = 1 [(validator.field) = {string_not_empty: true regex: "^[a-zA-Z0-9._%+\\-]+@[a-z0-9.\\-]+\\.[a-z]{2,4}$"}];
    string password = 4 [(validator.field) = {string_not_empty: true length_gt: 5 length_lt: 100}];
}
message ResendConfirmationEmailReq {
    enum Data {
        DDD = 0;
        NNN = 1;
        GGG = 2;
    }
    message Inner {
        string field = 1;
        Acc acc = 2;
        datatypes.Date date = 3;
        enum InnerEnum {
            SSS = 0;
            DDD = 1;
        }
    }
    Inner.InnerEnum inner = 4;
    Data data = 2;
    string account_id = 1 [(validator.field) = {string_not_empty: true}];
    // test if inner message works
    Inner inner_msg = 9;
}
message SignOutReq {

}
message ConfirmEmailReq {
    string token = 1 [(validator.field) = {string_not_empty: true}];
}
message ForgotPasswordReq {
    string email = 1 [(validator.field) = {string_not_empty: true regex: "^[a-zA-Z0-9._%+\\-]+@[a-z0-9.\\-]+\\.[a-z]{2,4}$"}];
}
message CheckResetPasswordTokenReq {
    string token = 1 [(validator.field) = {string_not_empty: true}];
}
message RequestChangeEmailReq {
    string new_email = 1 [(validator.field) = {string_not_empty: true regex: "^[a-zA-Z0-9._%+\\-]+@[a-z0-9.\\-]+\\.[a-z]{2,4}$"}];
}
message ChangeEmailReq {
    string token = 1 [(validator.field) = {string_not_empty: true}];
}
message ResetPasswordReq {
    string token = 1 [(validator.field) = {string_not_empty: true}];
    repeated string password = 2 [(validator.field) = {string_not_empty: true length_gt: 5 length_lt: 100}];
}
message ChangePasswordReq {
    string old_password = 1 [(validator.field) = {string_not_empty: true length_gt: 5 length_lt: 100}];
    string new_password = 2 [(validator.field) = {string_not_empty: true length_gt: 5 length_lt: 100}];
}
message RequestDeleteAccountReq {

}
message DeleteAccountReq {
    string token = 1;
}
// response
message SignInRes {
    Account account = 1 [(gql.field) = {params: "dd: SS" dirs: "@dir"}];
}
message SignUpWithEmailRes {
    Account account = 1;
}
message ConfirmEmailRes {

}
message GetCurrentAccountRes {
    repeated Account account = 1;
}
message CheckResetPasswordTokenRes {

}
message SignOutRes {

}
message ResendConfirmationEmailRes {

}
message ForgotPasswordRes {

}
message ResetPasswordRes {

}
message ChangePasswordRes {

}
message RequestChangeEmailRes {

}
message ChangeEmailRes {
    Account account = 1;
}
message RequestDeleteAccountRes {

}
message DeleteAccountRes {

}

//common
message Account {
    string account_id = 1;
    string email = 2;
    bool email_confirmed = 3;
}
message Acc {
    string account_id = 1;
}
message Unused {
    string s = 1;
}
enum Roles {
    DDD = 0;
    NNN = 1;
    GGG = 2;
}